--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/node": "^16.11.41",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "autoprefixer": "10.4.5",
     "bootstrap": "^5.1.3",
     "nanoid": "^4.0.0",
     "react": "^18.2.0",
@@ -22,8 +23,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
@@ -37,5 +37,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/bootstrap": "^5.1.12"
+  },
+  "overrides": {
+    "autoprefixer": "10.4.5"
   }
 }
