--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://ahmad-elshowair.github.io/taski",
   "name": "taski",
   "version": "0.1.0",
   "private": true,
@@ -20,7 +21,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -41,7 +44,8 @@
   },
   "devDependencies": {
     "@types/bootstrap": "^5.1.12",
-    "@types/react-beautiful-dnd": "^13.1.2"
+    "@types/react-beautiful-dnd": "^13.1.2",
+    "gh-pages": "^4.0.0"
   },
   "overrides": {
     "autoprefixer": "10.4.5"
